# notes

./: Makefile  README.md  pyproject.toml
notes/: __init__.py  __main__.py  args.py  cli.py  file.py  notes.py
tests/unit/: test_args.py  test_file.py
